Add image-rendering: pixelated.

This adds a new value "pixelated" to the "image-rendering"
property. This value sets the interpolation used when
scaling images to InterpolationNone.

Intent to implement:
https://groups.google.com/a/chromium.org/forum/#!topic/blink-dev/Q8N6FoeoPXI

BUG=260739,106662

Review URL: https://codereview.chromium.org/336693005

git-svn-id: svn://svn.chromium.org/blink/trunk@176839 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: c2bd930bfbd7222c12e1ebfd0217caabc6dea280